fix: Chat 成员接口处理用户不存在的情况
- 查询的 userId 在 user 表中不存在时，回退显示 username/realName
- 避免因数据不一致导致的 NullPointerException

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>